# se-toolkit-lab-8

./: .env.docker.example  .gitmodules  Caddyfile  REPORT.md  config.json  docker-compose.yml  pyproject.toml
backend/src/lms_backend/routers/: items.py
caddy/: Caddyfile
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: observability.py  server.py
nanobot/: Dockerfile  entrypoint.py  main.py  pyproject.toml  ws_server.py
nanobot/workspace/: AGENTS.md
nanobot/workspace/skills/cron/: SKILL.md
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
workspace/sessions/: cli_task1a-labs.jsonl  cli_task1a-loop.jsonl  cli_task1b-health.jsonl  cli_task1b-labs.jsonl
